--- a/Fichas/Changeling/sub/3.lfm
+++ b/Fichas/Changeling/sub/3.lfm
@@ -7,36 +7,36 @@
 
 		<layout left="62" top="100" width="760" height="980">
 
-			<textEditor left="5" top="90" width="360" height="60" name="aliadosn" field="aliados" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="90" width="360" height="60" name="juramentosn" field="juramentos" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="90" width="360" height="60" name="aliadosn" field="aliados" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="90" width="360" height="60" name="juramentosn" field="juramentos" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<textEditor left="5" top="185" width="360" height="60" name="contatosn" field="contatos" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="185" width="360" height="60" name="lemorancasn" field="lemorancas" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="185" width="360" height="60" name="contatosn" field="contatos" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="185" width="360" height="60" name="lemorancasn" field="lemorancas" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<textEditor left="5" top="280" width="360" height="60" name="sonhadoresn" field="sonhadores" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="280" width="360" height="60" name="recursosn" field="recursos" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="280" width="360" height="60" name="sonhadoresn" field="sonhadores" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="280" width="360" height="60" name="recursosn" field="recursos" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<textEditor left="5" top="375" width="360" height="60" name="possesn" field="posses" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="375" width="360" height="60" name="sequiton" field="sequito" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="375" width="360" height="60" name="possesn" field="posses" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="375" width="360" height="60" name="sequiton" field="sequito" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<edit left="540" top="436" width="145" height="30" name="outroanln" field="outroanl" fontColor="#48484A" horzTextAlign="center" fontSize="18" transparent="true"/>
+			<edit left="540" top="436" width="145" height="30" name="outroanln" field="outroanl" fontColor="#48484A" horzTextAlign="center" fontSize="18" fontStyle="bold" transparent="true"/>
 
-			<textEditor left="5" top="470" width="360" height="60" name="mentorn" field="mentor" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="470" width="360" height="60" name="outroann" field="outroan" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="470" width="360" height="60" name="mentorn" field="mentor" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="470" width="360" height="60" name="outroann" field="outroan" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<textEditor left="5" top="610" width="360" height="110" name="equipamentoscn" field="equipamentosc" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="610" width="360" height="110" name="equipamentospn" field="equipamentopc" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="610" width="360" height="110" name="equipamentoscn" field="equipamentosc" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="610" width="360" height="110" name="equipamentospn" field="equipamentopc" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<textEditor left="5" top="760" width="360" height="92" name="tesourosn" field="tesouros" fontColor="#48484A" fontSize="15" transparent="false"/>
-			<textEditor left="398" top="760" width="360" height="92" name="outrospertenn" field="outrosperten" fontColor="#48484A" fontSize="15" transparent="false"/>
+			<textEditor left="5" top="760" width="360" height="92" name="tesourosn" field="tesouros" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
+			<textEditor left="398" top="760" width="360" height="92" name="outrospertenn" field="outrosperten" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="false"/>
 
-			<edit left="5" top="910" width="209" height="26" name="propriedan1" field="proprieda1" fontColor="#48484A" fontSize="15" transparent="true"/>
-			<edit left="5" top="930" width="209" height="26" name="propriedan2" field="proprieda2" fontColor="#48484A" fontSize="15" transparent="true"/>
-			<edit left="5" top="949" width="209" height="26" name="propriedan3" field="proprieda3" fontColor="#48484A" fontSize="15" transparent="true"/>
+			<edit left="5" top="910" width="209" height="26" name="propriedan1" field="proprieda1" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+			<edit left="5" top="930" width="209" height="26" name="propriedan2" field="proprieda2" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+			<edit left="5" top="949" width="209" height="26" name="propriedan3" field="proprieda3" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
 
-			<edit left="232" top="910" width="526" height="26" name="propriedadn1" field="propriedad1" fontColor="#48484A" fontSize="15" transparent="true"/>
-			<edit left="232" top="930" width="526" height="26" name="propriedadn2" field="propriedad2" fontColor="#48484A" fontSize="15" transparent="true"/>
-			<edit left="232" top="948" width="526" height="26" name="propriedadn3" field="propriedad3" fontColor="#48484A" fontSize="15" transparent="true"/>
+			<edit left="232" top="910" width="526" height="26" name="propriedadn1" field="propriedad1" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+			<edit left="232" top="930" width="526" height="26" name="propriedadn2" field="propriedad2" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+			<edit left="232" top="948" width="526" height="26" name="propriedadn3" field="propriedad3" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
 
 		</layout>
 
