--- a/Fichas/Changeling/sub/4.lfm
+++ b/Fichas/Changeling/sub/4.lfm
@@ -7,25 +7,25 @@
 
 		<layout left="62" top="100" width="760" height="980">
 
-			<rectangle left="4" top="55" width="754" height="253" color="#FDFDFD"/>
-			<richEdit left="4" top="55" width="754" height="253" name="backgroundn" field="background"/>
+			<rectangle left="4" top="55" width="754" height="248" color="LightGray"/>
+			<richEdit left="4" top="55" width="754" height="253" backgroundColor="LightGray" name="backgroundn" field="background"/>
 
-			<edit left="148" top="302" width="102" height="26" name="datatitulan" field="datatitula" fontColor="#48484A" horzTextAlign="center" fontSize="15" transparent="true"/>
-			<edit left="425" top="302" width="333" height="26" name="sociedadesn" field="sociedades" fontColor="#48484A" fontSize="15" transparent="true"/>
+			<edit left="148" top="302" width="102" height="26" name="datatitulan" field="datatitula" fontColor="#48484A" horzTextAlign="center" fontSize="15" fontStyle="bold" transparent="true"/>
+			<edit left="425" top="302" width="333" height="26" name="sociedadesn" field="sociedades" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
 
 			<layout left="5" top="366" width="754" height="214">
 
-				<edit left="130" top="1" width="116" height="26" name="nverdadeiron" field="nverdadeiro" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="132" top="20" width="114" height="26" name="idadecn" field="idadec" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="113" top="39" width="133" height="26" name="idadean" field="idadea" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="149" top="58" width="97" height="26" name="datadenan" field="datadena" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="60" top="78" width="186" height="26" name="cabelosn" field="cabelos" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="47" top="97" width="199" height="26" name="olhosn" field="olhos" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="39" top="116" width="207" height="26" name="racan" field="raca" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="101" top="135" width="145" height="26" name="nacionalidan" field="nacionalida" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="52" top="154" width="194" height="26" name="alturan" field="altura" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="37" top="172" width="209" height="26" name="peson" field="peso" fontColor="#48484A" fontSize="15" transparent="true"/>
-				<edit left="56" top="191" width="190" height="26" name="generon" field="genero" fontColor="#48484A" fontSize="15" transparent="true"/>
+				<edit left="130" top="1" width="116" height="26" name="nverdadeiron" field="nverdadeiro" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="132" top="20" width="114" height="26" name="idadecn" field="idadec" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="113" top="39" width="133" height="26" name="idadean" field="idadea" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="149" top="58" width="97" height="26" name="datadenan" field="datadena" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="60" top="78" width="186" height="26" name="cabelosn" field="cabelos" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="47" top="97" width="199" height="26" name="olhosn" field="olhos" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="39" top="116" width="207" height="26" name="racan" field="raca" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="101" top="135" width="145" height="26" name="nacionalidan" field="nacionalida" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="52" top="154" width="194" height="26" name="alturan" field="altura" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="37" top="172" width="209" height="26" name="peson" field="peso" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
+				<edit left="56" top="191" width="190" height="26" name="generon" field="genero" fontColor="#48484A" fontSize="15" fontStyle="bold" transparent="true"/>
 
 			</layout>
 
@@ -34,8 +34,8 @@
 				<rectangle left="138" top="20" width="346" height="5" color="#FDFDFD"/>
 				<rectangle left="133" top="114" width="351" height="5" color="#FDFDFD"/>
 
-				<textEditor top="27" width="484" height="74" name="aparenciamn" field="aparenciam" fontColor="#48484A" fontSize="15"/>
-				<textEditor top="122" width="484" height="93" name="aparenciafn" field="aparenciaf" fontColor="#48484A" fontSize="15"/>
+				<textEditor top="27" width="484" height="74" name="aparenciamn" field="aparenciam" fontColor="#48484A" fontSize="15" fontStyle="bold"/>
+				<textEditor top="122" width="484" height="93" name="aparenciafn" field="aparenciaf" fontColor="#48484A" fontSize="15" fontStyle="bold"/>
 
 			</layout>
 
