--- a/Fichas/OsMundosDosMortos/sub/2.lfm
+++ b/Fichas/OsMundosDosMortos/sub/2.lfm
@@ -5,6 +5,35 @@
 
 	<scrollBox align="client">
 
+		<layout left="0" top="0" width="880" height="30">
+			<rectangle align="client" color="gray"/>
+			<label left="8" top="5" width="138" height="20" text="Histórico" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
+		</layout>
+
+		<layout left="10" top="40" width="860" height="160">
+			<rectangle left="5" top="0" color="Gainsboro" width="65" xradius="2" yradius="2"/>
+			<label left="7" width="80" height="20" text="Infância" fontStyle="bold" fontSize="16" fontColor="black"/>
+			<textEditor top="20" width="860" height="140" field="bginfancia" fontStyle="bold"/>
+		</layout>
+
+		<layout left="10" top="210" width="860" height="160">
+			<rectangle left="5" top="0" color="Gainsboro" width="103" xradius="2" yradius="2"/>
+			<label left="7" width="100" height="20" text="Adolescência" fontStyle="bold" fontSize="16" fontColor="black"/>
+			<textEditor top="20" width="860" height="140" field="bgadolescencia" fontStyle="bold"/>
+		</layout>
+
+		<layout left="10" top="380" width="860" height="160">
+			<rectangle left="5" top="0" color="Gainsboro" width="90" xradius="2" yradius="2"/>
+			<label left="7" width="90" height="20" text="Fase adulta" fontStyle="bold" fontSize="16" fontColor="black"/>
+			<textEditor top="20" width="860" height="140" field="bgadulta" fontStyle="bold"/>
+		</layout>
+
+		<layout left="10" top="550" width="860" height="228">
+			<rectangle left="5" top="0" color="Gainsboro" width="90" xradius="2" yradius="2"/>
+			<label left="7" width="90" height="20" text="Anotações" fontStyle="bold" fontSize="16" fontColor="black"/>
+			<textEditor top="20" width="860" height="208" field="anotacoes" fontStyle="bold"/>
+		</layout>
+
 	</scrollBox>
 
 </form>
