--- a/Fichas/OsMundosDosMortos/sub/1.lfm
+++ b/Fichas/OsMundosDosMortos/sub/1.lfm
@@ -7,6 +7,34 @@
         <edit left="90" top="0" width="200" height="25" fontStyle="bold" field="$(field)" type="$(nort)"/>
 	</template>
 
+	<template name="Tenbox">
+		<checkBox field="$(field)_1" left="17"/>
+		<checkBox field="$(field)_2" left="37"/>
+		<checkBox field="$(field)_3" left="57"/>
+		<checkBox field="$(field)_4" left="77"/>
+		<checkBox field="$(field)_5" left="97"/>
+		<checkBox field="$(field)_6" left="117"/>
+		<checkBox field="$(field)_7" left="137"/>
+		<checkBox field="$(field)_8" left="157"/>
+		<checkBox field="$(field)_9" left="177"/>
+		<checkBox field="$(field)_10" left="197"/>
+	</template>
+
+	<template name="bbollshor">
+		<horzLine top="18" width="130" strokeSize="2" strokeColor="black"/>
+		 <edit field="$(field)_e" left="2" top="0" width="125" height="20" fontStyle="bold" fontColor="black" fontSize="14" horzTextAlign="center" transparent="true"/>
+		<imageCheckBox field="$(field)_1" left="137" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+		<imageCheckBox field="$(field)_2" left="155" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+		<imageCheckBox field="$(field)_3" left="173" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+		<imageCheckBox field="$(field)_4" left="191" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+		<imageCheckBox field="$(field)_5" left="209" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+		<imageCheckBox field="$(field)_6" left="227" top="4" width="15" height="15" checkedImage="img/bboll2.png" uncheckedImage="img/bboll1.png"/>
+	</template>
+
+	<template name="class">
+		<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+	</template>
+
 	<image align="client" field="backgroundimg" style="stretch" src=""/>
 
 	<scrollBox align="client">
@@ -18,7 +46,6 @@
 		<layout left="0" top="0" width="880" height="30">
 			<rectangle align="client" color="gray"/>
 			<label left="8" top="5" width="138" height="20" text="Dados do Personagem" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<button left="780" top="2" width="40" height="25" hint="Bloqueia a ficha." text="Lock" canFocus="false"/>
 			<button left="830" top="2" width="40" height="25" text="BG" hitTest="true" canFocus="false" hint="Altera a imagem de fundo da ficha." onClick="Dialogs.selectImageURL('', function(url) sheet.backgroundimg = url end)"/>
 		</layout>
 
@@ -74,38 +101,17 @@
 		<layout left="8" top="245" width="235" height="160">
 			<rectangle align="client"/>
 			<label left="86" top="11" width="65" height="20" text="Músculos" horzTextAlign="leading" fontStyle="bold" fontSize="14" fontColor="black"/>
-			<checkBox field="musc1" left="17" top="30"/>
-			<checkBox field="musc2" left="37" top="30"/>>
-			<checkBox field="musc3" left="57" top="30"/>>
-			<checkBox field="musc4" left="77" top="30"/>>
-			<checkBox field="musc5" left="97" top="30"/>>
-			<checkBox field="musc6" left="117" top="30"/>>
-			<checkBox field="musc7" left="137" top="30"/>>
-			<checkBox field="musc8" left="157" top="30"/>>
-			<checkBox field="musc9" left="177" top="30"/>>
-			<checkBox field="musc10" left="197" top="30"/>>
+			<layout top="30" width="215" height="20">
+				<Tenbox field="musc"/>
+			</layout>
 			<label left="91" top="56" width="60" height="20" text="Cérebro" horzTextAlign="leading" fontStyle="bold" fontSize="14" fontColor="black"/>
-			<checkBox field="cereb1" left="17" top="75"/>
-			<checkBox field="cereb2" left="37" top="75"/>>
-			<checkBox field="cereb3" left="57" top="75"/>>
-			<checkBox field="cereb4" left="77" top="75"/>>
-			<checkBox field="cereb5" left="97" top="75"/>>
-			<checkBox field="cereb6" left="117" top="75"/>>
-			<checkBox field="cereb7" left="137" top="75"/>>
-			<checkBox field="cereb8" left="157" top="75"/>>
-			<checkBox field="cereb9" left="177" top="75"/>>
-			<checkBox field="cereb10" left="197" top="75"/>>
+			<layout top="75" width="215" height="20">
+				<Tenbox field="cereb"/>
+			</layout>
 			<label left="91" top="101" width="60" height="20" text="Coração" horzTextAlign="leading" fontStyle="bold" fontSize="14" fontColor="black"/>
-			<checkBox field="corac1" left="17" top="120"/>
-			<checkBox field="corac2" left="37" top="120"/>>
-			<checkBox field="corac3" left="57" top="120"/>>
-			<checkBox field="corac4" left="77" top="120"/>>
-			<checkBox field="corac5" left="97" top="120"/>>
-			<checkBox field="corac6" left="117" top="120"/>>
-			<checkBox field="corac7" left="137" top="120"/>>
-			<checkBox field="corac8" left="157" top="120"/>>
-			<checkBox field="corac9" left="177" top="120"/>>
-			<checkBox field="corac10" left="197" top="120"/>>
+			<layout top="120" width="215" height="20">
+				<Tenbox field="corac"/>
+			</layout>
 		</layout>
 
 		<layout left="254" top="245" width="370" height="160">
@@ -137,8 +143,68 @@
 
 		<layout left="10" top="457" width="860" height="320">
 			<rectangle align="client"/>
-			<label left="40" top="10" width="120" height="20" text="Minhas habilidades" horzTextAlign="leading" fontStyle="bold" fontSize="13" fontColor="black"/>
-			<label left="680" top="10" width="140" height="20" text="Habilidades de Classe" horzTextAlign="trailing" fontStyle="bold" fontSize="13" fontColor="black"/>
+			<label left="100" top="10" width="120" height="20" text="Minhas habilidades" horzTextAlign="leading" fontStyle="bold" fontSize="13" fontColor="black"/>
+			<label left="620" top="10" width="140" height="20" text="Habilidades de Classe" horzTextAlign="trailing" fontStyle="bold" fontSize="13" fontColor="black"/>
+
+			<layout left="38" top="36" width="260" height="250">
+				<layout left="10" top="11" width="245" height="20">
+					<bbollshor field="mhabilidades1"/>
+				</layout>
+				<layout left="10" top="41" width="245" height="20">
+					<bbollshor field="mhabilidades2"/>
+				</layout>
+				<layout left="10" top="71" width="245" height="20">
+					<bbollshor field="mhabilidades3"/>
+				</layout>
+				<layout left="10" top="101" width="245" height="20">
+					<bbollshor field="mhabilidades4"/>
+				</layout>
+				<layout left="10" top="131" width="245" height="20">
+					<bbollshor field="mhabilidades5"/>
+				</layout>
+				<layout left="10" top="161" width="245" height="20">
+					<bbollshor field="mhabilidades6"/>
+				</layout>
+				<layout left="10" top="191" width="245" height="20">
+					<bbollshor field="mhabilidades7"/>
+				</layout>
+				<layout left="10" top="221" width="245" height="20">
+					<bbollshor field="mhabilidades8"/>
+				</layout>
+			</layout>
+
+			<layout left="560" top="36" width="260" height="250">
+				<layout left="10" top="11" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 1 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel1" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+				<layout left="10" top="53" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 2 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel2" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+				<layout left="10" top="95" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 3 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel3" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+				<layout left="10" top="137" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 4 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel4" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+				<layout left="10" top="179" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 5 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel5" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+				<layout left="10" top="221" width="245" height="20">
+					<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
+					<label width="80" height="20" text="Nível 6 ->" fontStyle="bold" fontSize="15" fontColor="black"/>
+					<edit field="cnivel6" left="70" top="0" width="168" height="20" fontStyle="bold" fontColor="black" fontSize="15" transparent="true"/>
+				</layout>
+			</layout>
 		</layout>
 
 	</scrollBox>
