--- a/Fichas/GoldenDays/GD/1.lfm
+++ b/Fichas/GoldenDays/GD/1.lfm
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form name="OsMundosDosMortos1" align="client" theme="dark">
+<form name="GoldenDays01" align="client" theme="dark">
 
 	<template name="Cabeca">
 		<rectangle left="5" top="0" color="Gainsboro" width="80" xradius="2" yradius="2"/>
@@ -35,26 +35,22 @@
 		<horzLine top="18" width="238" strokeSize="2" strokeColor="black"/>
 	</template>
 
-	<image align="client" field="backgroundimg" style="stretch" src=""/>
+	<image align="client" style="stretch" src="img/background.jpg"/>
 
 	<scrollBox align="client">
 
 		<rectangle left="373" top="33" width="135" height="135" color="DimGray" xradius="5" yradius="5"/>
 		<label left="401" top="65" width="80" height="60" text="Sem Avatar" horzTextAlign="center"/>
-		<image field="imagempersona" editable="true" style="autoFit" src="" left="373" top="33" width="135" height="135"/>
+		<image field="imagempersona" animate="true" editable="false" style="autoFit" src="" left="373" top="33" width="135" height="135"/>
 
 		<layout left="0" top="0" width="880" height="30">
 			<rectangle align="client" color="gray"/>
 			<label left="8" top="5" width="138" height="20" text="Dados do Personagem" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<button left="830" top="2" width="40" height="25" text="BG" hitTest="true" canFocus="false" hint="Altera a imagem de fundo da ficha." onClick="Dialogs.selectImageURL('', function(url) sheet.backgroundimg = url end)"/>
 		</layout>
 
 		<layout left="0" top="170" width="880" height="30">
 			<rectangle align="client" color="gray"/>
 			<label left="8" top="5" width="138" height="20" text="Tendências" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<label left="640" top="5" width="148" height="20" text="Pontos de Experiência:" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<edit left="780" top="2" width="40" height="25" type="number" field="exptotal" horzTextAlign="center"/>
-			<edit left="830" top="2" width="40" height="25" type="number" field="expatual" horzTextAlign="center"/>
 		</layout>
 
 		<layout left="0" top="415" width="880" height="30">
@@ -81,14 +77,20 @@
 			<layout left="580" top="65" width="290" height="25" >
 				<Cabeca field="tribo" texto="Tribo" size="13" nort="text"/>
 			</layout>
+			<layout left="5" top="95" width="290" height="25" >
+				<Cabeca field="recurso" texto="Recurso" size="13" nort="text"/>
+			</layout>
+			<layout left="580" top="95" width="290" height="25" >
+				<Cabeca field="idade" texto="Idade" size="13" nort="number"/>
+			</layout>
 		</layout>
 
 		<layout top="211" width="880" height="25">
-			<rectangle left="8" color="Silver" width="235"/>
+			<rectangle left="8" color="Silver" width="235" xradius="5" yradius="5"/>
 			<label left="23" top="2" width="220" height="20" text="======= Tendências =======" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<rectangle left="254" color="Silver" width="370"/>
+			<rectangle left="254" color="Silver" width="370" xradius="5" yradius="5"/>
 			<label left="267" top="2" width="355" height="20" text="================ Limites ================" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
-			<rectangle left="635" color="Silver" width="235"/>
+			<rectangle left="635" color="Silver" width="235" xradius="5" yradius="5"/>
 			<label left="650" top="2" width="235" height="20" text="======================" horzTextAlign="leading" fontStyle="bold" fontColor="black"/>
 		</layout>
 
