--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form name="Tormenta01" align="client" theme="dark">
 
+	<scrollBox align="client">
+
 	<template name="Principal">
 		<rectangle left="5" top="0" color="Gainsboro" width="155" xradius="2" yradius="2"/>
 		<label left="8" top="4" width="155" height="20" text="$(texto)" horzTextAlign="leading" fontSize="15.0" fontStyle="bold" fontColor="black"/>
@@ -90,5 +92,7 @@
 			<Principal field="carisma" texto="Carisma(CAR)"/>
 		</layout>
 	</layout>
+	
+	</scrollBox>
 	
 </form>
